# shop_scraper

./: Cargo.toml  package.json  pnpm-lock.yaml
src/: main.rs
