[package]
name = "monitoring"
version = "0.1.0"
authors = ["Wojtek Wrona <wojtodzio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
scraper = "0.12.0"
async-trait = "0.1.42"
futures = "0.3"
